--- a/Bookstore413/Views/Home/Index.cshtml
+++ b/Bookstore413/Views/Home/Index.cshtml
@@ -2,7 +2,37 @@
     ViewData["Title"] = "Home Page";
 }
 
+@model IQueryable<Book> 
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to the Bookstore</h1>
+
+    <table class="table table-bordered align-content-center">
+        <thead class="thead-light">
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Publisher</th>
+                <th>ISBN</th>
+                <th>Classification</th>
+                <th>Category</th>
+                <th>Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!--dynamically display each row in table-->
+            @foreach (var x in Model)
+            {
+                <tr>
+                    <td>@x.Title</td>
+                    <td>@x.Author</td>
+                    <td>@x.Publisher</td>
+                    <td>@x.ISBN</td>
+                    <td>@x.Classification</td>
+                    <td>@x.Category</td>
+                    <td>$@x.Price</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
