--- a/Bookstore413/Views/Home/Index.cshtml
+++ b/Bookstore413/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@model IQueryable<Book> 
+@model BookListViewModel
 
 <div class="text-center">
     <h1 class="display-4">Welcome to the Bookstore</h1>
@@ -17,11 +17,12 @@
                 <th>Classification</th>
                 <th>Category</th>
                 <th>Price</th>
+                <th>Pages</th>
             </tr>
         </thead>
         <tbody>
             <!--dynamically display each row in table-->
-            @foreach (var x in Model)
+            @foreach (var x in Model.Books)
             {
                 <tr>
                     <td>@x.Title</td>
@@ -31,8 +32,11 @@
                     <td>@x.Classification</td>
                     <td>@x.Category</td>
                     <td>$@x.Price</td>
+                    <td>@x.Pages</td>
                 </tr>
             }
         </tbody>
     </table>
 </div>
+
+<div page-model="@Model.PagingInfo" page-action="Index"></div>
