--- a/Bookstore413/Views/_ViewImports.cshtml
+++ b/Bookstore413/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Bookstore413
 @using Bookstore413.Models
+@using Bookstore413.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Bookstore413
