--- a/Bookstore413/Views/Shared/_Layout.cshtml
+++ b/Bookstore413/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Bookstore413</title>
+    <title>Bookstore413</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -16,26 +16,22 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
-            <div clss="col-3">
+        <div class="row">
+            <div class="col-2">
+                <br />
                 <!--this is the view component-->
-                <vc:navigation-menu /> 
+                <vc:navigation-menu />
             </div>
-            <div class="col-9">
-                @RenderBody()
+            <div class="col-10">
+                <main role="main" class="pb-3">
+                    @RenderBody()
+                </main>
             </div>
-        </main>
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
