functionality of videos

--- a/Bookstore413/Pages/_ViewImports.cshtml
+++ b/Bookstore413/Pages/_ViewImports.cshtml
@@ -1,6 +1,5 @@
-﻿@using Bookstore413
+﻿@namespace Bookstore413.Pages
+@using Microsoft.AspNetCore.Mvc.RazorPages
 @using Bookstore413.Models
-@using Bookstore413.Models.ViewModels
 @using Bookstore413.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, Bookstore413
