--- a/Bookstore413/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/Bookstore413/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -13,5 +13,5 @@
        @(category == ViewBag.SelectedCategory ? "btn-primary" : "btn-outline-secondary")"
        asp-action="Index" asp-controller="Home"
        asp-route-category="@category"
-       asp-route-page="1">@category</a>
+       asp-route-pageNum="1">@category</a>
 }
